# otterly

./: .gitattributes  .gitignore  .oxlintrc.json  =2.0  AGENTS.md  CHANGELOG.md  README.md  git_commands_used.txt  package.json  pnpm-lock.yaml  vite.config.ts
.changeset/: brave-owls-dream.md  funny-nights-cheat.md  march-2026-features.md  nnc-shy-trees.md  silver-foxes-glow.md
.github/workflows/: changeset-version.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md
.shiftlog/: config
carbide/: .gitignore  2026-03-16_CARBIDE_BUGS.md  2026-03-16_sprint_evaluation.md  2026-03-18_CARBIDE_BUGS.md  2026-03-19_CARBIDE_BUGS.md  2026-03-19_ast_indexed_schema_plan.md  2026-03-20_CARBIDE_BUGS.md  2026-03-20_git_crypt_postmortem.md  2026-03-20_vault_startup.md  2026-03-21_pdf_export_findings.md  2026-03-21_state_management_efficiency_audit.md  2026-03-22_iwe_dynamic_completion_triggers.md  2026-03-XX_carbide_bugs.md  20260323_toolchain_manager_CRITICAL.md  AI_integration_implementation.md  FEATURES.md  PRIORITIES.md  PROMPT_TEMPLATE.md  Phase_3.md  README.md  TODO.md  badgerly.code-workspace  carbide-project-guide.md  git_features.md  git_remote_ops.md  iwe.md  key_features_roadmap.md  market_reserach_lokus.md  obsidian_formatting_breaks_html.md  plugin_obsidian.md  plugin_system.md  plugin_system_updated.md  release_publishing.md  upstream_comparison.md  upstream_comparison_plan.md
carbide/.ferrite/: state.json
carbide/.git-crypt/: SETUP.md
carbide/.otterly/: search.db-shm  search.db-wal  settings.json
carbide/archive/: FEATURES.md  PRIORITIES.md  browse_window_stuck_bug.md  carbide-project-guide.md  initial_implement_README.md  multiwindow_and_document_viewer.md  phase_2.md  phase_3.md  phase_6.md  plugin_system.md  pre-2026-03-16_PRIORITIES.md  source_visual_split.md  terminal_hanging_investigation.md  terminal_security.md  upstream_opt_second_pass.md
carbide/completed/: Phase_2.md  Phase_3.md  Phase_6.md  scratch.md  scratch_highvalue.md  source_visual_split.md
carbide/implementation/: 2026-03-19_fix_1a_1b_file_integrity.md  2026-03-19_fix_1c_folder_watcher.md  atomic_save_parse_index.md  (+31 more)
docs/: CLI_comparison.md  UI.md  architecture.md  markdown-syntax-guide.md  markdown_line_breaks.md  plugin_howto.md  upsteam_opt_secondpass.md
scripts/: codegen.mjs  download_rumdl.sh  measure_build.mjs  release.sh  sync-versions.mjs  tag-release.mjs
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: menu.rs  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/ai/: service.rs
src-tauri/src/features/bases/: service.rs
src-tauri/src/features/canvas/: canvas_link_extractor.rs  mod.rs
src-tauri/src/features/git/: service.rs
src-tauri/src/features/graph/: service.rs  types.rs
src-tauri/src/features/iwe/: mod.rs  service.rs  types.rs
src-tauri/src/features/lint/: cli.rs  config.rs  lsp.rs  mod.rs  service.rs  types.rs
src-tauri/src/features/notes/: service.rs
src-tauri/src/features/pipeline/: service.rs
src-tauri/src/features/plugin/: mod.rs  service.rs  settings.rs  types.rs  watcher.rs
src-tauri/src/features/search/: db.rs  embeddings.rs  frontmatter.rs  hybrid.rs  link_parser.rs  mod.rs  model.rs  service.rs  vector_db.rs
src-tauri/src/features/settings/: service.rs
src-tauri/src/features/stt/: mod.rs  transcription.rs
src-tauri/src/features/tags/: service.rs
src-tauri/src/features/tasks/: mod.rs
src-tauri/src/features/toolchain/: downloader.rs  resolver.rs  service.rs
src-tauri/src/features/vault/: service.rs
src-tauri/src/features/vault_settings/: service.rs
src-tauri/src/features/watcher/: service.rs
src-tauri/src/shared/: buffer.rs  cache.rs  constants.rs  frontmatter.rs  io_utils.rs  link_parser.rs  markdown_doc.rs  mod.rs  storage.rs  vault_ignore.rs
src-tauri/src/shared/lsp_client/: mod.rs  transport.rs  types.rs
src-tauri/src/tests/: mod.rs
src-tauri/tests/: link_rewrite.rs  notes_service_safety.rs  plugin_protocol.rs  search_db_behavior.rs
(+590 files in other folders)
