[package]
name = "badgerly"
version = "1.0.0"
description = "Local-first markdown vault"
authors = ["altamkhan"]
edition = "2021"
autotests = false

[lib]
name = "badgerly_lib"
path = "src/lib.rs"

[[bin]]
name = "badgerly"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
comrak = "0.50.0"
mime_guess = "2.0.5"
notify = "7.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yml = "0.0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1.43.0", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.19"
walkdir = "2.5.0"
tauri-plugin-pty = "0.2.1"
glob = "0.3.3"
tempfile = "3"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
ropey = "1.6.1"
tauri-plugin-single-instance = "2.4.0"
regex = "1.12.3"
lazy_static = "1.5.0"
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }
hf-hub = { version = "0.5", features = ["tokio"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
fuzzy-matcher = "0.3"

# STT dependencies (Phase 1: audio pipeline)
cpal = "0.16.0"
rubato = "0.16.2"
rustfft = "6.4.0"
hound = "3.5.1"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
strsim = "0.11.0"
natural = "0.5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
specta = { version = "=2.0.0-rc.22" }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# STT dependencies (Phase 2: transcription engine)
transcribe-rs = { version = "0.3.2", features = ["whisper-cpp", "onnx"] }

# STT dependencies (Phase 5: audio file decoding)
rodio = { git = "https://github.com/cjpais/rodio.git" }

# Platform-specific STT accelerator features
[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3.2", features = ["whisper-metal"] }

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.2", features = ["whisper-vulkan", "ort-directml"] }

[target.'cfg(target_os = "linux")'.dependencies]
transcribe-rs = { version = "0.3.2", features = ["whisper-vulkan"] }

[dev-dependencies]
filetime = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
